--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Woman-in-the-golden-ages_67405
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67405-h/images/cover.jpg
 creator:
   author:
     agent_name: Mason, Amelia Gere
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/954
     wikipedia: https://en.wikipedia.org/wiki/Amelia_Gere_Mason
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67405#Woman-in-the-golden-ages
 gutenberg_issued: '2022-02-14'
 identifiers:
   gutenberg: '67405'
